<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="35dp"
        android:gravity="center"
        android:text="@string/connectViewHeader"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonMainActivity"
        android:layout_width="190dp"
        android:layout_height="53dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="111dp"
        android:layout_marginBottom="46dp"
        android:gravity="center"
        android:text="@string/connectButton"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logTextView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="91dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="91dp"
        android:gravity="center"
        android:text="@string/enterIPAddress"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/ipAddressText"
        android:layout_width="333dp"
        android:layout_height="47dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="39dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/sampleIP"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="133dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="133dp"
        android:gravity="center"
        android:text="@string/connectStatus"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ipAddressText" />

    <TextView
        android:id="@+id/logTextView"
        android:layout_width="352dp"
        android:layout_height="174dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="31dp"
        android:scrollbars="vertical"
        android:hint="@string/logPlaceholderText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>